--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -8,7 +8,7 @@
         {% csrf_token %}
         Username : 
         <br>
-        <input name="Username" type="text" value="">
+        <input name="username" type="text" value="">
         <br>
         Password : 
         <br>
