--- a/blogproject/templates/base.html
+++ b/blogproject/templates/base.html
@@ -4,11 +4,26 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    
+    <link href="/docs/4.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v3.8.5">
+    <link href="album.css" rel="stylesheet">
     <title>380nm</title>
     <style>@font-face { font-family: 'Chosunilbo_myungjo'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Chosunilbo_myungjo.woff') format('woff'); font-weight: normal; font-style: normal; }
     @font-face { font-family: 'S-CoreDream-6Bold'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff') format('woff'); font-weight: normal; font-style: normal; }
     @font-face { font-family: 'S-CoreDream-2ExtraLight'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff') format('woff'); font-weight: normal; font-style: normal; }
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
     </style>
 
 </head>
@@ -26,7 +41,7 @@
           <a class="nav-link" href="{% url 'home' %}" style="color:white; font-family: 'S-CoreDream-2ExtraLight';">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'new' %}" style="color:white; font-family: 'S-CoreDream-2ExtraLight';">Write</a>
+          <a class="nav-link" href="{% url 'newblog' %}" style="color:white; font-family: 'S-CoreDream-2ExtraLight';">Write</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'portfolio' %}" style="color:white; font-family: 'S-CoreDream-2ExtraLight';">Portfolio</a>
@@ -42,7 +57,11 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="{% url 'signup' %}" style="font-family: 'S-CoreDream-2ExtraLight';">Sign up</a>
             <a class="dropdown-item" href="{% url 'login' %}" style="font-family: 'S-CoreDream-2ExtraLight';">Login</a>
-            <a class="dropdown-item" href="{% url 'logout' %}" style="font-family: 'S-CoreDream-2ExtraLight';">Logout</a>
+            <a class="dropdown-item" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+                            <form id="logout" method="POST" action="">
+                                {% csrf_token %} <input type="hidden" />
+                            </form>
+            <!--<a class="dropdown-item" href="{% url 'logout' %}" style="font-family: 'S-CoreDream-2ExtraLight';">Logout</a>-->
           </div>
         </li>
       </ul>
